syntax = "proto3";

package mc.comm;

option go_package = "mc/comm";

message PBVec4 {
    float w = 1;
    float x = 2;
    float y = 3;
    float z = 4;
}

message PBTransform {
    PBVec4 translate = 1;
    PBVec4 rotation = 2;
}

message PBNode {
    PBTransform transform = 1;
    repeated string act_logic_list = 2;
    repeated string model_list = 3; // 一个 node 会有多个 mesh
    string material = 4;
    repeated PBNode sub_list = 5; // 所有的子节点
}

message PBScene {
    repeated PBNode root_list = 1; // 所有根节点
}

message PBVec3 {
    float x = 1;
    float y = 2;
    float z = 3;
}


message PBLight {
    PBVec3 pos = 1; // 光源位置， 对于 direction light， 此项无意义
    PBVec3 forward = 2; // 光的发射方向
    PBVec3 color = 3; // 光源颜色
    PBVec3 attenuation = 4; // 光源衰减
    int32 kind = 5; // 光源种类 direction, point, spot
    PBVec3 cutoff = 6; // spot light 专用
}
